feat: add docker files and update .env.example and .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DATABASE_URL="postgresql+asyncpg://evently:eventlypass@localhost:5432/evently_dev"
-REDIS_URL="redis://localhost:6379/0"
-ADMIN_KEY="change_me_admin_key"
-SECRET_KEY="change_me_secret"
-DB_POOL_SIZE=10
-DB_MAX_OVERFLOW=20
+# .env.template (DO NOT commit secrets)
+DATABASE_URL=postgresql+asyncpg://utsavam:<POSTGRES_PASSWORD>@<DB_HOST>:5432/utsavam_db
+REDIS_URL=redis://<REDIS_HOST>:6379/0
+ADMIN_KEY=replace-with-admin-key
+S3_BUCKET=your-backup-bucket
+AWS_REGION=ap-south-1
