--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,44 @@
-version: '3.8'
+version: "3.9"
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+    image: utsavam-app:latest
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://utsavam:utsavam_pass@postgres:5433/utsavam_dev
+      - REDIS_URL=redis://redis:6379/0
+      - ADMIN_KEY=${ADMIN_KEY:-change_me_admin_key}
+    depends_on:
+      - postgres
+      - redis
+    ports:
+      - "8000:8000"
+
   postgres:
     image: postgres:15
     environment:
       POSTGRES_DB: utsavam_dev
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: utsavam
+      POSTGRES_PASSWORD: utsavam_pass
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      - pgdata:/var/lib/postgresql/data
 
   redis:
-    image: redis:7-alpine
+    image: redis:7
     ports:
       - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
     volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
+      - redisdata:/data
 
 volumes:
-  postgres_data:
-  redis_data:
+  pgdata:
+  redisdata:
+
+
